# project-garden

./: .gitignore  README.md
00-named-pattern-unif/: README.md  dune-project  named_pattern_unification.opam
01-typecheck-dependent/: dune-project
01-typecheck-dependent/lib/: .#raw.ml  bidir.ml  debru.ml  domain.ml  dune  eval.ml  examples.ml  helpers.ml  metas.ml  partial.ml  quote.ml  raw.ml  runtime.ml  syntax.ml
02-agda-experements/: nats.agda  nats.agdai
02-agda-experiments/: nats.agdai  paraconsistent.agda  paraconsistent.agdai  reproduction.agda  stlc.agda  stlc.agdai  stlc2.agdai
03-coq-experiments/: .#stlc.v  bool.v  stlc.v  turing.v
03-formatter/: middle-justify.py
04-cps-conv/: README.md  dune-project
04-rank2-inference/: .replit  dune-project  mylib.opam  replit_zip_error_log.txt
04-rank2-inference/.cache/nix/: binary-cache-v6.sqlite
04-rank2-inference/.cache/replit/: __replit_disk_meta.json
04-rank2-inference/.cache/replit/nix/: env.json
04-rank2-inference/lib/: hello.ml
05-algo-J/: AlgoJ.hs  README.md
06-isabelle-tycheck-correct/: README.md  tycheck-correct.thy
