(lang dune 3.13)

(name dependent_typechecker)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name dependent_typechecker)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune angstrom fmt ppx_deriving)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
