(lang dune 3.6)

; if you change the project's name, make
(name mylib)

(generate_opam_files true)

; set these fields for opam configuration!
; (source (github username/reponame))
; (authors "Author Name")
; (maintainers "Maintainer Name")
; (license LICENSE)
; (documentation https://url/to/documentation)

(package
 (name mylib)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
